--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body {
   background: rgba(200, 200, 200, 0.1);
+  overflow: hidden;
+}
+
+webview {
+  position: absolute;
+  left: -9999px;
+  width: 1px;
+  height: 1px;
 }
